# ecu-dev

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  check_misra  clean  ecu_client  ecu_program  flash  fullclean  make  monitor  network_client  network_server  pi.cmake  reconfigure  rtos_bin
client/: TCPEchoClient.cpp  client.cpp  srv.cpp
cmake/: pi.cmake
libs/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSIPConfig.h  RTOS.cpp  RTOS.hpp  RTOS_IP.cpp  RTOS_IP.hpp  application.c  application.h
misra/: .gitignore  cppcheck-misra-parsetexts.py
sdk/: CRC.c  Message.h  Server.cpp  Server.hpp  System.cpp  System.hpp  utils.hpp
src/: .cvsignore  .gitignore  Parameter.cpp  Parameter.hpp  ParameterList.hpp  Routine.cpp  Routine.hpp  RoutineManager.hpp  Server.cpp  Server.hpp  System.cpp  System.hpp  echo_client.cpp  main.cpp  test.cpp  types.hpp  utils.hpp
src/client/: CMakeLists.txt  main.cpp  main.hpp
src/esp32/: CMakeLists.txt  sdkconfig
src/esp32/components/MCP2515/: CANSPI.c  CMakeLists.txt  MCP2515.c
src/esp32/components/MCP2515/include/: CANSPI.h  MCP2515.h
src/esp32/components/ecu-pins/: CMakeLists.txt  ecu-pins.c
src/esp32/components/ecu-pins/include/: ecu-pins.h
src/esp32/components/ecu-shared/: CMakeLists.txt
src/esp32/components/ecu-shared/include/: ecu-shared.h
src/esp32/main/: CMakeLists.txt  app_main.c  can_test.c  spi_commands.c
src/esp32/main/include/: app.h
src/libs/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSIPConfig.h  RTOS.cpp  RTOS.h  RTOS.hpp  RTOS_IP.cpp  RTOS_IP.hpp
src/libs/FreeRTOS/Source/include/: portable.h
src/libs/FreeRTOS/Source/portable/MemMang/: heap_1.c
src/libs/drivers/: spi.h
src/myfirstproject2/: .mxproject  .project  myfirstproject2.ioc
src/myfirstproject2/CA7/: .project  manifest.prop
src/myfirstproject2/CA7/DeviceTree/myfirstproject2/tf-a/: stm32mp157d-myfirstproject2-mx.dts
src/myfirstproject2/CA7/DeviceTree/myfirstproject2/u-boot/: stm32mp15-mx.dtsi  stm32mp157d-myfirstproject2-mx-u-boot.dtsi  stm32mp157d-myfirstproject2-mx.dts.bak
src/myfirstproject2/CM4/: .cproject  .project  myfirstproject2_CM4 Debug.cfg  myfirstproject2_CM4 Debug.launch
src/myfirstproject2/CM4/Core/Inc/: lock_resource.h  main.h  stm32mp15xx_disco_conf.h  stm32mp1xx_hal_conf.h  stm32mp1xx_it.h
src/myfirstproject2/CM4/Core/Src/: lock_resource.c  main.c  stm32mp1xx_hal_msp.c  stm32mp1xx_it.c
src/myfirstproject2/CM4/Drivers/BSP/STM32MP15xx_DISCO/: Release_Notes.html  stm32mp15xx_disco.c  stm32mp15xx_disco_errno.h
src/myfirstproject2/CM4/RemoteProc/: fw_cortex_m4.sh
src/program/: CMakeLists.txt  main.c  main.cpp  mock_rtos.c  test.c  test.cpp
src/sdk/: CMakeLists.txt  Channel.cpp  ChannelList.cpp  Connection.cpp  Connection.hpp  Connection_commands.cpp  ModuleManager.cpp  Parameter.cpp  ParameterList.c  ParameterList.cpp  ParameterList.hpp  ParameterValue.cpp  Routine.hpp  RoutineManager.c  RoutineManager.cpp  RoutineManager.hpp  Server.cpp  Server.hpp  System.c  System.cpp  System.hpp
src/sdk/include/: Channel.hpp  ChannelList.hpp  Connection.hpp  Error.hpp  IO.h  IO.hpp  IOTypes.h  ModuleManager.hpp  Parameter.h  Parameter.hpp  ParameterList.h  ParameterList.hpp  ParameterValue.hpp  Routine.hpp  RoutineManager.h  RoutineManager.hpp  Server.hpp  System.h  System.hpp  types.h  utils.h  utils.hpp
src/sdk/portable/raspi/: IO.cpp
src/sdk/portable/raspi+esp32/: IO.cpp
src/sdk/portable/stm32mp1/: Error.cpp  IO.c  IO.cpp
src/sdk/portable/x86/: Error.cpp  IO.cpp
src/shared/: CANMsg.c  CANMsg.h  CAN_Msg.c  CAN_Msg.h  CMakeLists.txt  CRC.c  CRC.h  ECU_Error.c  ECU_Error.h  ECU_Msg.c  ECU_Msg.h  ESP32Msg.c  ESP32Msg.h  ESP32_In_Msg.c  ESP32_In_Msg.h  ESP32_Msg.h  ESP32_Out_Msg.c  ESP32_Out_Msg.h  Header.c  Header.h  Interproc_Msg.c  Interproc_Msg.h  Makefile  Message.c  Message.h  Timestamp.c  types.h
src/shared/include/: CAN_Msg.h  CRC.h  ECU_Error.h  ECU_Msg.h  Header.h  Interproc_Msg.h  Parameter.h  Timestamp.h  types.h
